--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-4">
             <p>
-              Hallo selamat datang di Protofolio saya perkenalkan nama saya bachrul panji saya mahasiswa teknis infomorasi saya dari subang danmembuat web Protofolio adalah untuk bisa memperkenalkan diri saya dan ini hasil dari belajar 4 bulan bersama pak sandhika galih dan alhamadulilah ada yang paham walupun masih ada yang perlu dibimbing
+              Hallo selamat datang di Protofolio saya perkenalkan nama saya bachrul panji saya mahasiswa teknik infomorasi saya dari subang dan membuat web Protofolio adalah untuk bisa memperkenalkan diri saya dan ini hasil dari belajar 4 bulan bersama pak sandhika galih dan alhamadulilah ada yang paham walupun masih ada yang perlu dibimbing
             </p>
           </div>
           <div class="col-4">
@@ -105,7 +105,7 @@
           </div>
           <div class="col-4">
             <p>
-              dan saya berharap ketika saya bisa mengusai segala bidang yang berkaitan dengan IT saya bisa menciptakan segala sesuatu untuk memecah problem solving yang selama ini orang mengeluh dari segi informasi dan jualan karena  zaman yang sekarang makin maju suatu negara maka teknologi makin berkembang makanya dengan adanya akses internet saya membuat dan berkarya.
+              dan saya berharap ketika saya bisa mengusai segala bidang yang berkaitan dengan IT saya bisa menciptakan segala sesuatu untuk memecahkan problem solving yang selama ini orang mengeluh dari segi informasi dan jualan karena  zaman yang sekarang makin maju suatu negara maka teknologi makin berkembang makanya dengan adanya akses internet saya membuat dan berkarya.
             </p>
           </div>
         </div>
@@ -131,12 +131,12 @@
         <div class="row justify-content-center fs-5">
           <div class="col-4">
             <p>
-              sejarah saya untuk bisa ini saya gak mau di katakan orang bodoh sama orang lain karena dulu di masa hidup di pondok saya di katakan orang paling bodoh dan sering banget di hina oleh semua kalangan teman guru saya dan di situ hampir merasa gak kuar dan ingin sekali tapi untuk saat ini saya akan menunjukan bahwa apa yang di katakan orang itu salah walupun saya tidak ahli di bidang pelajaran setidak ya saya ahli di bidang IT kenapa saya ingin sekali bergerak di bidang IT karena saya ingin banget membantu orang yang sedang kesusah.
+              sejarah saya untuk bisa ini saya gak mau di katakan orang bodoh sama orang lain karena dulu di masa hidup saya di pondok saya di katakan orang paling bodoh dan sering banget di hina oleh semua kalangan teman guru saya dan di situ hampir merasa gak kuat dan ingin sekali keluar tapi untuk saat ini saya akan menunjukan bahwa apa yang di katakan orang itu salah walupun saya tidak ahli di bidang pelajaran setidak ya saya ahli di bidang IT kenapa saya ingin sekali bergerak di bidang IT karena saya ingin banget membantu orang yang sedang kesusah.
             </p>
           </div>
           <div class="col-4">
             <p>
-              makanya saya ingin sekali bergerak di bidang ini dan saya akan tunjukan kepada orang yang dulu pernah menghina saya mengejek saya bodoh tolol dan lain-lain bahwa saya mampu untuk menciptakan sesuatu yang lebih dari orang dulu menganggap saya bodoh orang lain sekarang sedang berbahagia tapi sekarang say sedang berjuang untuk mencapai susuatu yang saya harapakan yaitu Backend Develoment intinya saya ingin yang berkaitan dengan IT saya akan kuasai.
+              makanya saya ingin sekali bergerak di bidang ini dan saya akan tunjukan kepada orang yang dulu pernah menghina saya mengejek saya bodoh, tolol dan lain-lain bahwa saya mampu untuk menciptakan sesuatu yang lebih dari orang dulu menganggap saya bodoh orang lain sekarang sedang berbahagia tapi sekarang saya sedang berjuang untuk mencapai susuatu yang saya harapakan yaitu Backend Develoment intinya saya ingin yang berkaitan dengan IT saya akan kuasai.
             </p>
           </div>
         </div>
